--- a/scss/_scafolding.scss
+++ b/scss/_scafolding.scss
@@ -3,7 +3,7 @@
 }
 
 .body {
-    font-family: Gilroy, sans-serif;
+    font-family: Montserrat, Lato, sans-serif;
     background-color: #F9F9F9;
 }
 
