--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("../fonts/fonts.css"); /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+@import url("../assets/fonts/fonts.css"); /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -311,15 +311,15 @@ template {
   box-sizing: border-box;
 }
 
-.body {
-  font-family: Gilroy, sans-serif;
-  background-color: #F9F9F9;
-}
-
 .wrapper {
-  width: 1320px;
+  width: 315px;
   margin-left: auto;
   margin-right: auto;
+}
+
+body {
+  font-family: Montserrat, Lato, sans-serif;
+  background: #fff;
 }
 
 a {
@@ -347,6 +347,131 @@ input {
   border: none;
   outline: none;
   background: transparent;
+}
+
+.color-background {
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+  border-radius: 0px 0px 12px 12px;
+}
+
+.color-background-1 {
+  width: 100%;
+  height: 10px;
+  background: #CACADB;
+  border-radius: 0px 0px 12px 12px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.color-background-2 {
+  width: 100%;
+  height: 10px;
+  background: #E7E7F2;
+  border-radius: 0px 0px 12px 12px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.h3-pink {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 37px;
+  background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-emphasis-color: transparent;
+}
+
+.link-right-arrow {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #24A3FF;
+}
+
+.link-right-arrow::after {
+  content: url("../assets/images/arrow-right-small.svg");
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin-left: 2px;
+}
+
+.services-icon {
+  background: #FFFFFF;
+  border-radius: 24px;
+  width: 92px;
+  height: 92px;
+  margin-bottom: 30px;
+}
+.services-img {
+  margin: 14px;
+}
+.services-title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+  color: #24A3FF;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+.services-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FFFFFF;
+  margin: 0;
+}
+.services-block {
+  margin-bottom: 30px;
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    width: 648px;
+  }
+  .services-blocks {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+  .services-block {
+    width: 294px;
+  }
+  .h3-pink {
+    font-size: 38px;
+    line-height: 46px;
+  }
+}
+@media (min-width: 1024px) {
+  .wrapper {
+    width: 904px;
+  }
+  .services-blocks {
+    justify-content: space-between;
+  }
+  .services-block {
+    width: 261px;
+  }
+}
+@media (min-width: 1440px) {
+  .wrapper {
+    width: 1320px;
+  }
+  .services-block {
+    width: 400px;
+  }
+}
+@media (min-width: 1920px) {
+  .wrapper {
+    width: 1600px;
+  }
+  .services-block {
+    width: 493px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
