--- a/scss/_scafolding.scss
+++ b/scss/_scafolding.scss
@@ -2,15 +2,15 @@
     box-sizing: border-box;
 }
 
-.body {
-    font-family: Montserrat, Lato, sans-serif;
-    background-color: #F9F9F9;
-}
-
 .wrapper {
-    width: 1320px;
+    width: 315px;
     margin-left: auto;
     margin-right: auto;
+}
+
+body {
+    font-family: Montserrat, Lato, sans-serif;
+    background: #fff;
 }
 
 a {
