--- a/css/style.css
+++ b/css/style.css
@@ -349,27 +349,22 @@ input {
   background: transparent;
 }
 
-.color-background {
+.main-services {
   background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
   border-radius: 0px 0px 12px 12px;
+  padding-top: 30px;
+  padding-bottom: 60px;
 }
 
-.color-background-1 {
-  width: 100%;
+.main-services::after {
+  display: block;
+  content: "";
+  width: 335px;
   height: 10px;
   background: #CACADB;
   border-radius: 0px 0px 12px 12px;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-.color-background-2 {
-  width: 100%;
-  height: 10px;
-  background: #E7E7F2;
-  border-radius: 0px 0px 12px 12px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .h3-pink {
@@ -426,7 +421,7 @@ input {
   margin: 0;
 }
 .services-block {
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 @media (min-width: 768px) {
@@ -444,6 +439,21 @@ input {
   .h3-pink {
     font-size: 38px;
     line-height: 46px;
+  }
+  .logos {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .logos-main {
+    width: 256px;
+  }
+  .logos-7 {
+    display: block;
+  }
+}
+@media (min-width: 375px) and (max-width: 768px) {
+  .logos-hidden-7 {
+    display: none;
   }
 }
 @media (min-width: 1024px) {
@@ -472,6 +482,48 @@ input {
   .services-block {
     width: 493px;
   }
+}
+.logos-main {
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logos-1 {
+  background: #1C4280;
+}
+.logos-2 {
+  background: #143646;
+}
+.logos-3 {
+  background: #F48B30;
+}
+.logos-4 {
+  background: #9E4DC3;
+}
+.logos-5 {
+  background: #FD9339;
+}
+.logos-6 {
+  background: #E2E2E4;
+}
+.logos-7 {
+  background: #C71C36;
+}
+.logos-8 {
+  background: #DCF3F9;
+}
+.logos-9 {
+  background: #EAEAEA;
+}
+.logos-10 {
+  background: #282240;
+}
+.logos-11 {
+  background: #1D4568;
+}
+.logos-12 {
+  background: #000000;
 }
 
 /*# sourceMappingURL=style.css.map */
