--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@
     padding-bottom: 60px;
 }
 
-.main-services::after {
+.bg-1 {
     display: block;
     content: '';
     width: 335px;
@@ -18,6 +18,18 @@
     border-radius: 0px 0px 12px 12px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.bg-2 {
+    display: block;
+    content: '';
+    width: 295px;
+    height: 10px;
+    background: #E7E7F2;
+    border-radius: 0px 0px 12px 12px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
 }
 
 .h3-pink {
@@ -103,6 +115,14 @@
         line-height: 46px;
     }
 
+    .bg-1 {
+        width: 728px;
+    }
+
+    .bg-2 {
+        width: 688px;
+    }
+
     .logos {
         display: flex;
         flex-wrap: wrap;
@@ -137,6 +157,14 @@
     .services-block {
         width: 261px;
     }
+
+    .bg-1 {
+        width: 984px;
+    }
+
+    .bg-2 {
+        width: 944px;
+    }
 }
 
 @media (min-width: 1440px) {
@@ -147,6 +175,14 @@
     .services-block {
         width: 400px;
     }
+
+    .bg-1 {
+        width: 1400px;
+    }
+
+    .bg-2 {
+        width: 1360px;
+    }
 }
 
 @media (min-width: 1920px) {
@@ -156,6 +192,14 @@
 
     .services-block {
         width: 493px;
+    }
+
+    .bg-1 {
+        width: 1880px;
+    }
+
+    .bg-2 {
+        width: 1840px;
     }
 }
 
