--- a/css/style.css
+++ b/css/style.css
@@ -312,9 +312,11 @@ template {
 }
 
 .wrapper {
-  width: 315px;
   margin-left: auto;
   margin-right: auto;
+  max-width: 1600px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 body {
@@ -354,32 +356,32 @@ input {
   border-radius: 0px 0px 12px 12px;
   padding-top: 30px;
   padding-bottom: 60px;
+  position: relative;
 }
 
-.bg-1 {
-  display: block;
+.main-services::after {
   content: "";
-  width: 335px;
+  position: absolute;
+  top: 100%;
+  left: 20px;
   height: 10px;
   background: #CACADB;
   border-radius: 0px 0px 12px 12px;
-  margin-left: auto;
-  margin-right: auto;
+  width: calc(100% - 40px);
 }
 
-.bg-2 {
-  display: block;
+.main-services::before {
   content: "";
-  width: 295px;
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 40px;
   height: 10px;
   background: #E7E7F2;
   border-radius: 0px 0px 12px 12px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 50px;
+  width: calc(100% - 80px);
 }
 
-.h3-pink {
+.hero {
   font-weight: 700;
   font-size: 30px;
   line-height: 37px;
@@ -388,9 +390,11 @@ input {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-emphasis-color: transparent;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
-.link-right-arrow {
+.subtitle {
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
@@ -399,7 +403,7 @@ input {
   color: #24A3FF;
 }
 
-.link-right-arrow::after {
+.subtitle::after {
   content: url("../assets/images/arrow-right-small.svg");
   display: inline-block;
   width: 12px;
@@ -433,12 +437,14 @@ input {
   margin: 0;
 }
 .services-block {
-  margin-top: 30px;
+  width: 100%;
+  margin-bottom: 30px;
 }
 
 @media (min-width: 768px) {
   .wrapper {
-    width: 648px;
+    padding-left: 60px;
+    padding-right: 60px;
   }
   .services-blocks {
     display: flex;
@@ -446,11 +452,13 @@ input {
     gap: 60px;
   }
   .services-block {
-    width: 294px;
+    width: calc(50% - 30px);
+    margin-bottom: 0px;
   }
-  .h3-pink {
+  .hero {
     font-size: 38px;
     line-height: 46px;
+    margin-bottom: 60px;
   }
   .bg-1 {
     width: 728px;
@@ -475,14 +483,11 @@ input {
   }
 }
 @media (min-width: 1024px) {
-  .wrapper {
-    width: 904px;
-  }
   .services-blocks {
     justify-content: space-between;
   }
   .services-block {
-    width: 261px;
+    width: calc(33.33% - 40px);
   }
   .bg-1 {
     width: 984px;
@@ -492,11 +497,8 @@ input {
   }
 }
 @media (min-width: 1440px) {
-  .wrapper {
-    width: 1320px;
-  }
   .services-block {
-    width: 400px;
+    width: calc(33.33% - 40px);
   }
   .bg-1 {
     width: 1400px;
@@ -506,11 +508,8 @@ input {
   }
 }
 @media (min-width: 1920px) {
-  .wrapper {
-    width: 1600px;
-  }
   .services-block {
-    width: 493px;
+    width: calc(33.33% - 40px);
   }
   .bg-1 {
     width: 1880px;
