--- a/scss/_scafolding.scss
+++ b/scss/_scafolding.scss
@@ -3,9 +3,11 @@
 }
 
 .wrapper {
-    width: 315px;
     margin-left: auto;
     margin-right: auto;
+    max-width: 1600px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 body {
