--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,32 +7,32 @@
     border-radius: 0px 0px 12px 12px;
     padding-top: 30px;
     padding-bottom: 60px;
+    position: relative;
 }
 
-.bg-1 {
-    display: block;
-    content: '';
-    width: 335px;
+.main-services::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 20px;
     height: 10px;
     background: #CACADB;
     border-radius: 0px 0px 12px 12px;
-    margin-left: auto;
-    margin-right: auto;
+    width: calc(100% - 40px);
 }
 
-.bg-2 {
-    display: block;
-    content: '';
-    width: 295px;
+.main-services::before {
+    content: "";
+    position: absolute;
+    top: calc(100% + 10px);
+    left: 40px;
     height: 10px;
     background: #E7E7F2;
     border-radius: 0px 0px 12px 12px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 50px;
+    width: calc(100% - 80px);
 }
 
-.h3-pink {
+.hero {
     font-weight: 700;
     font-size: 30px;
     line-height: 37px;
@@ -41,9 +41,11 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-emphasis-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
-.link-right-arrow {
+.subtitle {
     font-weight: 700;
     font-size: 14px;
     line-height: 17px;
@@ -52,7 +54,7 @@
     color: #24A3FF;
 }
 
-.link-right-arrow::after {
+.subtitle::after {
     content: url('../assets/images/arrow-right-small.svg');
     display: inline-block;
     width: 12px;
@@ -91,13 +93,15 @@
     }
 
     &-block {
-        margin-top: 30px;
+        width: 100%;
+        margin-bottom: 30px;
     }
 }
 
 @media (min-width: 768px) {
     .wrapper {
-        width: 648px;
+        padding-left: 60px;
+        padding-right: 60px;
     }
 
     .services-blocks {
@@ -107,12 +111,14 @@
     }
 
     .services-block {
-        width: 294px;
+        width: calc(50% - 30px);
+        margin-bottom: 0px;
     }
 
-    .h3-pink {
+    .hero {
         font-size: 38px;
         line-height: 46px;
+        margin-bottom: 60px;
     }
 
     .bg-1 {
@@ -146,16 +152,12 @@
 }
 
 @media (min-width: 1024px) {
-    .wrapper {
-        width: 904px;
-    }
-
     .services-blocks {
         justify-content: space-between;
     }
 
     .services-block {
-        width: 261px;
+        width: calc(33.33% - 40px);
     }
 
     .bg-1 {
@@ -168,12 +170,8 @@
 }
 
 @media (min-width: 1440px) {
-    .wrapper {
-        width: 1320px;
-    }
-
     .services-block {
-        width: 400px;
+        width: calc(33.33% - 40px);
     }
 
     .bg-1 {
@@ -186,12 +184,10 @@
 }
 
 @media (min-width: 1920px) {
-    .wrapper {
-        width: 1600px;
-    }
+ 
 
     .services-block {
-        width: 493px;
+        width: calc(33.33% - 40px);
     }
 
     .bg-1 {
