--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ input {
 }
 
 @media (max-width: 768px) {
-  .logos-main:nth(n+7) {
+  .logos-main:nth-child(n+7) {
     display: none;
   }
 }
@@ -489,18 +489,22 @@ input {
     width: calc(33.33% - 40px);
   }
 }
+@media (min-width: 1720px) {
+  .logos {
+    border-radius: 100px;
+  }
+}
 @media (min-width: 1920px) {
   .services-block {
     width: calc(33.33% - 40px);
-  }
-  .logos {
-    border-radius: 100px;
   }
 }
 .logos {
   margin-left: auto;
   margin-right: auto;
   max-width: 1720px;
+  overflow: hidden;
+  border-radius: 10px;
 }
 .logos-main {
   height: 120px;
