--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,9 +98,8 @@
     }
 }
 
-
 @media (max-width: 768px) {
-    .logos-main:nth(n+7) {
+    .logos-main:nth-child(n+7) {
         display: none;
     } 
 }
@@ -160,13 +159,15 @@
     }
 }
 
+@media (min-width: 1720px) {
+    .logos {
+        border-radius: 100px;
+    }
+}
+
 @media (min-width: 1920px) {
     .services-block {
         width: calc(33.33% - 40px);
-    }
-
-    .logos {
-        border-radius: 100px;
     }
 }
 
@@ -174,6 +175,8 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1720px;
+    overflow: hidden;
+    border-radius: 10px;
 
     &-main {
         height: 120px;
