--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,7 +124,10 @@
     .hero {
         font-size: 38px;
         line-height: 46px;
-        margin-bottom: 60px;
+
+        &-services {
+            margin-bottom: 60px;
+        }
     }
 
     .logos {
@@ -151,6 +154,12 @@
             width: 25%;
         }
     }
+
+    .slider-blocks {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 30px;
+    }
 }
 
 @media (min-width: 1440px) {
@@ -161,7 +170,8 @@
 
 @media (min-width: 1720px) {
     .logos {
-        border-radius: 100px;
+        overflow: hidden;
+        border-radius: 10px;
     }
 }
 
@@ -175,8 +185,6 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1720px;
-    overflow: hidden;
-    border-radius: 10px;
 
     &-main {
         height: 120px;
@@ -231,5 +239,63 @@
 
     &-12 {
         background: #000000;
+    }
+}
+
+.slider {
+    padding-top: 30px;
+    padding-bottom: 60px;
+
+    &-content {
+        padding: 30px;
+    }
+
+    &-bg {
+        background-color: #F5F5FA;
+        border-radius: 12px;
+        overflow: hidden;
+        margin-bottom: 30px;
+
+        &-img {
+            background-image: url(../assets/images/slider-image.jpg);
+            height: 500px;
+            width: 100%;
+            background-size: cover;
+        }
+    }
+
+    &-name {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        color: #B3B3BA;
+        margin-top: 0;
+        margin-bottom: 6px;
+
+        &-position {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 22px;
+            color: #B3B3BA;
+            margin: 0;
+        }
+    }
+}
+
+.circle {
+    display: flex;
+    justify-content: center;
+
+    &-slider {
+        width: 16px;
+        height: 16px;
+        background: #24A3FF;
+        opacity: 0.2;
+        border-radius: 100%;
+        margin-right: 15px;
+
+        &-last {
+                margin-right: 0;
+            }
     }
 }
