--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,10 @@ body {
   background: #fff;
 }
 
+.background {
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+}
+
 a {
   text-decoration: none;
 }
@@ -349,6 +353,137 @@ input {
   border: none;
   outline: none;
   background: transparent;
+}
+
+.header {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  background-image: url(../assets/images/symbol-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+}
+.header__adress {
+  display: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: #B3B3BA;
+}
+.header__fb {
+  display: none;
+}
+.header__title {
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 46px;
+  text-align: center;
+  color: #FFFFFF;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 0;
+  display: grid;
+  align-self: center;
+}
+.header__scroll {
+  width: 42px;
+  height: 42px;
+  opacity: 0.5;
+  border: 2px solid #FFFFFF;
+  border-radius: 100%;
+  display: grid;
+  justify-self: center;
+  align-self: self-end;
+  margin-bottom: 30px;
+  background: url(../assets/images/arrow-down-scroll-header.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.header-top {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 10px 15px;
+  width: 100%;
+  height: 45px;
+  background: rgba(245, 245, 250, 0.2);
+  align-items: center;
+}
+.header-bottom {
+  display: grid;
+  grid-template-columns: 1fr 32px;
+  padding: 15px;
+}
+.header-bottom__left {
+  display: grid;
+  grid-template-columns: 90px 1fr;
+  align-items: center;
+}
+.header-bottom__logo {
+  width: 69.33px;
+  height: 32px;
+}
+.header-bottom__link {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+.header-bottom__menu-btn {
+  width: 32px;
+  height: 32px;
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+  align-items: center;
+}
+.header-bottom__menu-btn span {
+  width: 18px;
+  height: 2px;
+  background-color: #FFFFFF;
+  position: absolute;
+  top: 50%;
+  left: calc(50% - 9px);
+}
+.header-bottom__menu-btn span:nth-of-type(2) {
+  top: calc(50% - 5px);
+}
+.header-bottom__menu-btn span:nth-of-type(3) {
+  top: calc(50% + 5px);
+}
+
+.nav-top {
+  font-size: 0;
+}
+.nav-top__item {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #FFFFFF;
+}
+.nav-top__item:not(:last-child) {
+  margin-right: 14px;
+}
+.nav-top__item:nth-child(2) {
+  margin-right: 7px;
+}
+.nav-top__item--active {
+  display: inline-block;
+  padding: 5px 7px;
+  width: 33px;
+  height: 25px;
+  background: #F0145A;
+  border-radius: 8px;
+}
+.nav-top__phone {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: #FFFFFF;
 }
 
 .advantages-links {
@@ -411,7 +546,6 @@ input {
 }
 
 .main-services {
-  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
   border-radius: 0px 0px 12px 12px;
   padding-top: 30px;
   padding-bottom: 60px;
