--- a/scss/_scafolding.scss
+++ b/scss/_scafolding.scss
@@ -15,6 +15,10 @@ body {
     background: #fff;
 }
 
+.background {
+    background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+}
+
 a {
     text-decoration: none;
 }
