--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./normalize";
 @import "./scafolding";
 @import "./header";
+@import "./mobile-menu";
 @import "./footer";
 
 .advantages-links {
